# mars-air-quility

./: .env  .env.example  .gitignore  .pr-body.md  .pylintrc  .trivyignore  EVENT_TAGGING_FLOW.md  LICENSE  app.py  config.py  gunicorn.conf.py  mlss-monitor.service  package-lock.json  package.json  pyproject.toml  readme.md
.claude/: launch.json
.gitea/workflows/: _dind_check.yml  _runner_smoke.yml  lint.yml  runner-smoke.yml  test.yml  trivy.yml
.github/workflows/: lint.yml  publish-mlss-contracts.yml  publish-mlss-grow.yml  pylint.yml  test.yml
config/: anomaly.yaml  fingerprints.yaml  multivar_anomaly.yaml  rules.yaml
contracts/: README.md  pyproject.toml
contracts/src/mlss_contracts/: __init__.py  _validators.py  capabilities.py  config_payloads.py  enums.py  plant_profiles.py  ws_messages.py
database/: backup_schema.py  db_logger.py  effectors_schema.py  grow_schema.py  import_csv_to_db.py  init_db.py  migrations.py  user_db.py
docs/: BACKUP.md  Bugs_Improvements_and_Roadmap.md  CI.md  CONFIGURATION.md  DATABASE.md  EFFECTOR_NODE_MAP_DESIGN.md  EVENT_TAGGING_FLOW.md  JSON_STORAGE_AUDIT.md  MOBILE.md  PI_IMAGE_BUILD.md  PLANT_GROW_UNIT_ARCHITECTURE.md  PLANT_GROW_UNIT_HARDWARE.md  PLANT_GROW_UNIT_SETUP.md  PLANT_GROW_UNIT_USAGE.md  PRODUCTION.md  RELEASE_PROCESS.md  USB_SSD_BOOT_GUIDE.md  endpoint-audit.md  tagging_design.md  threading-audit.md  threading-test-gaps.md
docs/grow_unit_enclosure/: README.md  enclosure.scad
docs/plans/: 2026-04-12-ui-redesign-phase-2-dashboard-history.md  2026-04-12-ui-redesign-phase-3-controls-admin-settings.md
external_api_interfaces/: kasa_smart_plug.py  open_meteo.py
grow_unit/: README.md  install.sh  pyproject.toml
grow_unit/src/mlss_grow/: __init__.py  buffer.py  camera.py  config.py  config_sync.py  dispatch.py  enrol.py  host_bootstrap.py  host_resolver.py  light_budget.py  light_schedule.py  photo_buffer.py  pid.py  safety_loop.py  safety_override.py  service.py  state_persistence.py  ws_client.py  ws_protocol.py
grow_unit/src/mlss_grow/actuators/: __init__.py  automation_phat.py  base.py
grow_unit/src/mlss_grow/sensors/: __init__.py  base.py  seesaw.py
grow_unit/systemd/: mlss-grow.service
mlss_monitor/: anomaly_detector.py  app.py  detection_engine.py  effectors.py  event_bus.py  fan_controller.py  feature_extractor.py  feature_vector.py  hot_tier.py  incident_grouper.py  incident_signature_storage.py  incidents_narrative.py  inference_engine.py  inference_evidence.py  inference_evidence_storage.py  multivar_anomaly_detector.py  narrative_engine.py  rbac.py  state.py  threshold_engine.py  wsgi.py  yaml_io.py
mlss_monitor/attribution/: __init__.py  engine.py  loader.py  scorer.py
mlss_monitor/backup/: __init__.py  _drain.py  bootstrap.py  config.py  outbox.py  postgres_client.py  replicated_tables.py  s3_client.py  server_schema.py  worker.py
mlss_monitor/data_sources/: __init__.py  aht20_source.py  base.py  bmp280_source.py  mics6814_source.py  pm_source.py  sgp30_source.py  weather_source.py
mlss_monitor/effectors/: __init__.py  _fan_rules.py  ac.py  base.py  evaluator.py  fan.py  generic.py  heater.py  humidity.py  light.py  registry.py  store.py
mlss_monitor/grow/: __init__.py  api_helpers.py  auth.py  handlers.py  health_watchdog.py  photo_storage.py  storage_check.py  timelapse_jobs.py  ws_registry.py
mlss_monitor/notifications/: __init__.py  cleanup.py  dispatcher.py  event_map.py  push_client.py  tls_profile.py  vapid.py
mlss_monitor/routes/: __init__.py  api_backup.py  api_data.py  api_effectors.py  api_effectors_v2.py  api_fan.py  api_grow_config.py  api_grow_diagnostics.py  api_grow_dist.py  api_grow_enroll.py  api_grow_errors.py  api_grow_history.py  api_grow_journal.py  api_grow_photos.py  api_grow_settings.py  api_grow_timelapse.py  api_grow_units.py  api_grow_ws.py  api_history.py  api_incidents.py  api_inferences.py  api_insights.py  api_notifications.py  api_settings.py  api_stream.py  api_tags.py  api_tls.py  api_topology.py  api_users.py  api_weather.py  auth.py  pages.py  system.py
scripts/: _strip_pathdep.py  build_grow_wheel.sh  build_local_wheels.sh  build_pi_image.sh  generate_certs.py  generate_local_ca.sh  generate_pwa_icons.py  migrate_categories.py  prepare_pypi_release.py  setup_gitea_mirror.py  setup_pi.sh
scripts/stage-mlss-grow/: prerun.sh
sensor_interfaces/: bmp280.py  mics6814.py  sb_components_pm_sensor.py  sgp30.py
sensors/: aht20.py  display.py  sb_components_pm_sensor.py  sgp30.py
static/: manifest.json  sw.js  timeline_mockup.html
static/css/: admin.css  backup.css  base.css  controls.css  dashboard.css  grow.css  history.css  incident_graph.css  mobile.css  notifications.css  topology.css
templates/: _grow_subnav.html  admin.html  admin_backup.html  base.html  controls.html  dashboard.html  grow_errors.html  grow_fleet.html  grow_settings.html  grow_unit_detail.html  history.html  ie_anomaly.html  ie_config.html  ie_fingerprints.html  ie_rules.html  ie_sources.html  incidents.html  insights_engine.html  login.html  notifications.html
tests/: conftest.py  test_anomaly_bootstrap.py  test_anomaly_detector.py  test_anomaly_reset.py  test_api_backup.py  test_api_endpoint_merges.py  test_api_history.py  test_api_incidents.py  test_api_inferences.py  test_api_insights.py  test_api_tags.py  test_async.py  test_async_timeouts.py  test_attribution_persistence.py  test_attribution_reload.py  test_backup_bootstrap.py  test_backup_config.py  test_backup_decorator.py  test_backup_delete_scope.py  test_backup_drain_db.py  test_backup_drain_files.py  test_backup_outbox.py  test_backup_phase2_smoke.py  test_backup_postgres_client.py  test_backup_s3_client.py  test_backup_schema.py  test_backup_server_schema.py  test_backup_worker_drain_db.py  test_backup_worker_drain_files.py  test_backup_worker_eventbus.py  test_backup_worker_lifecycle.py  test_backup_worker_startup.py  test_backup_worker_state.py  test_bmp280.py  test_config_roundtrip.py  test_csrf.py  test_daily_forecast.py  test_data_migrations.py  test_data_sources.py  test_db_logger.py  (+49 more)
(+329 files in other folders)
