[tool.poetry]
name = "mlss-monitor"
version = "0.1.0"
description = "Mars Life Support Sensor Monitor"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3"
dynaconf = "^3.2"
adafruit-circuitpython-ahtx0 = "^1.0.27"
adafruit-circuitpython-sgp30 = "^2.0.4"
pimoroni-mics6814 = "^1.0.0"
adafruit-blinka = "^8.2.1"
Pillow = "^10.0"
adafruit-circuitpython-rgb-display = "^3.14.1"
psutil = "==7.0.0"
python-kasa = "==0.10.2"
authlib = ">=1.3.0"
requests = ">=2.31.0"
rule-engine = "^4.5"
river = "^0.23"
# numpy 2.x dropped 32-bit ARM wheels; pin to 1.26.x which ships armv7l wheels on PyPI
numpy = "^1.26"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[tool.poetry.group.visualization]
optional = true

[tool.poetry.group.visualization.dependencies]
pandas = "^3.0"
matplotlib = "^3.7"

[[tool.poetry.source]]
name = "piwheels"
url = "https://www.piwheels.org/simple"
priority = "supplemental"

[tool.poetry.scripts]
mlss-monitor = "app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
