[tool.poetry]
name = "mlss-contracts"
version = "0.1.0"
description = "Shared pydantic schemas between MLSS server and grow unit firmware"
authors = ["MLSS"]
packages = [{include = "mlss_contracts", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
